# nemo

./: .dockerignore  .env  .envrc  .flake8  .gitignore  .style.yapf  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
config/: hparams.yaml
docs/: _config.yml  nldl-2020.md
python/: analyze_model.py  build_datasets.py  create_report.py  datasets.py  evaluate_model.py  find_hparams.py  finetune_model.py  hparams.py  images.py  layers.py  models.py  preprocess-data.py  preprocess_data.py  pyproject.toml  run_model.py  train_model.py  training_suite.py
python/aux/: build_datasets.py  preprocess_data.py
python/cmd/: build_datasets.py  extract_weights.py  preprocess_data.py
python/nemo/: datasets.py  hparams.py  images.py  models.py  utils.py
python/preprocessing/: build_datasets.py
python/util/: extract_weights.py
python/utils/: build_datasets.py
springfield/: evaluate.yaml  finetune.yaml  hparams.yaml  suite.yaml  suite2.yaml  train.yaml
springfield/128x128/: evaluate.yaml  suite.yaml
springfield/new-data/: evaluate.yaml  finetune.yaml  suite-combined.yaml  suite.yaml
