[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "nemo"
version = "0.2.0"
description = ""
authors = ["Thomas Johansen <thomas.h.johansen@uit.no>"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-isort = "^3.0.0"
isort = { version = "^4.3.21", extras = ["pyproject"] }
rope = "^0.17.0"

[tool.poetry.dependencies]
python = "^3.6"

# TensorFlow is expected to be supplied by the container image.
tensorflow = { version = "^2.3.0", optional = true }

docopt = "*"
gast = "*"
h5py = "*"
imageio = "*"
matplotlib = "*"
numpy = "*"
opencv-python-headless = "*"
pandas = "*"
pyyaml = "*"
scikit-image = "*"
scikit-learn = "*"
scipy = "*"
tensorflow-hub = "*"
tqdm = "*"

[tool.poetry.extras]
tensorflow = ["tensorflow"]

[tool.black]
line_length = 120
target_version = ["py36"]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_types = 0
multi_line_output = 3
use_parentheses = true

# Custom sections for some important modules.
known_docopt = "docopt"
known_tensorflow = "tensorflow,tensorboard"
sections = "DOCOPT,FUTURE,STDLIB,TENSORFLOW,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
