[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "nemo"
version = "0.2.0"
description = ""
authors = ["Thomas Johansen <thomas.h.johansen@uit.no>"]

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-isort = "^3.0.0"
isort = { version = "^4.3.21", extras = ["pyproject"] }
rope = "^0.17.0"
yapf = "^0.30.0"

[tool.poetry.dependencies]
python = "^3.7"

# TensorFlow is expected to be supplied by the container image.
# tensorflow = { version = "^2.3.0", optional = true }

h5py = "^2.10.0"
matplotlib = "^3.3.1"
numpy = "^1.18.5"
opencv-python-headless = "^4.4.0.42"
pandas = "^1.1.1"
pillow = "^7.2.0"
pyyaml = "^5.3.1"
scikit-image = "^0.17.2"
scikit-learn = "^0.23.2"
scipy = "^1.4.1"
tensorflow = "^2.3.0"
wandb = "^0.9.6"

# [tool.poetry.extras]
# tensorflow = ["tensorflow"]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 999
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
